--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - "dbdata:/var/lib/mysql"
 
   phpmyadmin:
     image: phpmyadmin
@@ -23,3 +25,6 @@ services:
       - 8080:80
     environment:
       - PMA_ARBITRARY=1
+
+volumes:
+  dbdata:
