--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 80:80
+      - "80:80"
     volumes:
       - ./src:/var/www/html/
 
@@ -15,6 +15,8 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: password
+    ports:
+      - "3306:3306"
     volumes:
       - "dbdata:/var/lib/mysql"
 
@@ -22,7 +24,7 @@ services:
     image: phpmyadmin
     restart: always
     ports:
-      - 8080:80
+      - "8080:80"
     environment:
       - PMA_ARBITRARY=1
 
